@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Use default Kolab folder for default taks list preference.
 * [jan] Mark Kolab folder as default when changing default task list preference.
  </notes>
  <contents>
@@ -1261,6 +1262,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Use default Kolab folder for default taks list preference.
 * [jan] Mark Kolab folder as default when changing default task list preference.
    </notes>
   </release>
