@@ -2,6 +2,7 @@
 v4.0.2-git
 ----------
 
+[jan] Use default Kolab folder for default taks list preference.
 [jan] Mark Kolab folder as default when changing default task list preference.
 
 
